Snapshot 439e31672b

* Emit BuddyHandleJoined with Buddy and handle so sugar.presence can
  track handles without calling PS (morgs)
* Create Tubes Channel during join process (morgs)

Snapshot 6d79687f8b

* #3683: don't use (potentially long) user-supplied nickname in mDNS instance
  names, this can break Salut activity advertisement (smcv)
* #3422: don't emit spurious CurrentActivityChanged signal when changing from
  no current activity to no current activity (smcv)
* #3465: don't keep invite-only activities in the mesh view after we leave
  them (smcv)

Snapshot 6df1f3eca5

* #3506: LL and server plugins are mutually exclusive for trial-3 (dcbw)

Snapshot 46898a3e00

* Adapt to sugar API change (marco)

Snapshot b8d04713ac

* #3380: de-restrict invitations so non-initiator can invite people to an
  activity (only effective if you also have Gabble trial3a 20070912 snapshot)
  (smcv)
* #3369: avoid Gabble invite-only activities disappearing from the
  mesh view when we join them (smcv)
* #3370: fix error reporting in logs by working around dbus-python bug#12403
  (smcv)

Snapshot bff163d57b

* #3328: when we join an activity on Salut, don't stop it from being
  the other participants' current activity (smcv)
* #3327: don't let a slower connection manager delete current activity
  advertised by a faster one (smcv)
* #2299: Be sure buddies keys are converted to string (cassidy)
* #3291: Further improve activity participant tracking (smcv)
* Correctly pick up existing Salut connections (smcv)
* Don't crash if a buddy property is None (smcv)
* #3290: When a buddy goes offline, consider them to have left all their
  activities (smcv)

Snapshot 3ed091301b

* Improve tracking of who's in activities with us (smcv)
* Refactor joining/sharing so we don't claim to have succeeded,
  or try to SetProperties(), until we're actually in the chatroom
  (fixes regression with Salut darcs HEAD) (smcv)

Snapshot 3b1f4a0c42
