@@ -1,3 +1,5 @@
+* #4027: associate activity debug messages with the relevant activity (smcv)
+
 Snapshot 439e31672b
 
 * Emit BuddyHandleJoined with Buddy and handle so sugar.presence can
